testing ok, minor fixes

--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,10 @@ APP_URL=http://localhost
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
-APP_FAKER_LOCALE=en_US
+APP_FAKER_LOCALE=fr_FR
+
+APP_ADMINISTRATEUR_EMAIL=
+APP_ADMINISTRATEUR_PASSWORD=
 
 APP_MAINTENANCE_DRIVER=file
 APP_MAINTENANCE_STORE=database
